// TODO(sumit): Track this PR and update the spec when the PR is merged.
// https://github.com/cloudevents/spec/blob/2857d6d57dcf0f641513f4f77157cb9a475052f9/spec.proto
// This is WIP spec introduced in https://github.com/cloudevents/spec/pull/626 (Re-Introducing
// Protocol Buffer Representation)
// As this is used internally for HTTP Exporter only, we will update this when the PR is approved
// and merged.
// Based on reading through the discussion in the PR, this looks good enough to start with.
/**
 * CloudEvent Protobuf Format
 *
 * - Required context attributes are explicity represented.
 * - Optional and Extension context attributes are carried in a map structure.
 * - Data may be represented as binary, text, or protobuf messages.
 */

syntax = "proto3";

package io.cloudevents.v0;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.cloudevents.v0.proto";

message CloudEvent {

  // -- CloudEvent Context Attributes

  // Required
  string id = 1;
  string source = 2; // URI-reference
  string spec_version = 3;
  string type = 4;

  // Optional & Extension
  map<string, CloudEventAttribute> attributes = 5;

  // -- CloudEvent Data
  oneof data_oneof {

    // Binary data
    bytes binary_data = 6;

    // String data
    string text_data = 7;

    // Protobuf Message data
    google.protobuf.Any proto_data = 8;
  }

  /**
   * The CloudEvent specification defines
   * seven atrribute types...
   */

  message CloudEventAttribute {

    oneof attr_oneof {
      bool ce_boolean = 1;
      sfixed32 ce_integer = 2;
      string ce_string = 3;
      bytes ce_binary = 4;
      string ce_uri = 5;
      string ce_uri_reference = 6;
      google.protobuf.Timestamp ce_timestamp = 7;
    }
  }
}